<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/tab_dashboard" />
    <item
        android:id="@+id/nav_dns"
        android:icon="@drawable/ic_dns"
        android:title="@string/tab_dns" />
    <item
        android:id="@+id/nav_vpn"
        android:icon="@drawable/ic_vpn"
        android:title="@string/tab_vpn" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/tab_settings" />
</menu>
